# Report-Generator

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  db.py  main.py  schemas.py  utils.py
app/services/: __init__.py  corpus.py  critic.py  editorial_ai.py  evaluation.py  exports.py  feedback.py  generation.py  market.py  runtime.py  sources.py  training.py
app/static/: styles.css
app/templates/: base.html  corpus.html  dashboard.html  history.html  issue.html  settings.html  sources.html  topics.html  training.html
docs/: review-rubric.md  review-template.md
scripts/: corpus_grounded_review.py  import_local_corpus.py  recover_style_corpus_from_mlx_sft.py  run_writer_overnight.py  train_writer_mlx.py
tests/: __init__.py  test_app.py
