[project]
name = "local-briefing-studio"
version = "0.1.0"
description = "Private local newsroom and training studio for weekly macro and tech briefings."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "cryptography>=46,<47",
  "fastapi>=0.115,<0.116",
  "feedparser>=6.0,<7",
  "httpx>=0.28,<0.29",
  "jinja2>=3.1,<4",
  "mlx>=0.29,<0.30",
  "mlx-lm>=0.28,<0.29",
  "pypdf>=5.3,<6",
  "python-docx>=1.1,<2",
  "python-multipart>=0.0.20,<0.1",
  "uvicorn>=0.34,<0.35",
  "yfinance>=0.2.54,<0.3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
